# rs-msdf

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: generation.rs
src/: error.rs  export.rs  geometry.rs  lib.rs  main.rs  metadata.rs  parser.rs  raster.rs
tests/: cli.rs  iconset_visual.rs
