[package]
name = "rs-msdf"
version = "0.1.0"
edition = "2026"
license = "Apache-2.0"
description = "A small Rust-based multi-channel signed distance field generator for SVGs."
repository = "https://github.com/StraiF/rs-msdf"

[lib]
name = "rs_msdf"
path = "src/lib.rs"

[[bin]]
name = "rs-msdf"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
png = "0.17"
rayon = "1.10"
roxmltree = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tiny-skia-path = "0.12"
usvg = "0.47"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.10"
