[package]
name = "rs-msdf"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A small Rust-based multi-channel signed distance field generator for SVGs."
repository = "https://github.com/StraiFRBLX/rs-msdf"

[lib]
name = "rs_msdf"
path = "src/lib.rs"

[[bin]]
name = "rs-msdf"
path = "src/main.rs"

[[bench]]
name = "generation"
harness = false

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
png = "0.17"
rayon = "1.10"
resvg = "0.47"
roxmltree = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tiny-skia = "0.12"
tiny-skia-path = "0.12"
usvg = "0.47"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.10"
